tests/fixtures/LatestTests/ObjectTests/errors/invalid_unary_operation.fg
/; EXPECT_ERROR: InvalidUnaryOperator
type Person = {
    name: str
    age: int
}

var p: Person = {
    name: "John",
    age: 30
}

var result = -p

